# python-project-50

./: .gitignore  README.md  makefile  pyproject.toml
.github/workflows/: test.yml
difference_calculator/scripts/: .gendiff.py.swp  gendiff.py
difference_calculator/style/: plain.py  stylish.py
gendiff/scripts/: gendiff.py
test_files/: comp1.yaml  comp2.yaml  file1.yml
tests/: .test_gendiff.py.swp  test_gendiff.py
